demo-app -> demo-glimmerx-app for consistency

--- a/test-packages/demo-glimmerx-app/index.html
+++ b/test-packages/demo-glimmerx-app/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>demo-app</title>
+    <title>demo-glimmerx-app</title>
 
     <link rel="icon" href="./public/favicon.png" />
     <link rel="apple-touch-icon" href="./public/logo192.png" />
