demo-glimmerx-app -> ts-glimmerx-app

--- a/test-packages/ts-glimmerx-app/index.html
+++ b/test-packages/ts-glimmerx-app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>demo-glimmerx-app</title>
+    <title>ts-glimmerx-app</title>
 
     <link rel="icon" href="./public/favicon.png" />
     <link rel="apple-touch-icon" href="./public/logo192.png" />
