--- a/test-packages/ts-glimmerx-app/tests/index.html
+++ b/test-packages/ts-glimmerx-app/tests/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>demo-glimmerx-app Tests</title>
+    <title>ts-glimmerx-app Tests</title>
     <link rel="icon" href="../public/favicon.png" />
   </head>
   <body>
