--- a/test-packages/ts-ember-app/app/index.html
+++ b/test-packages/ts-ember-app/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/demo-ember-app.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ts-ember-app.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/demo-ember-app.js"></script>
+    <script src="{{rootURL}}assets/ts-ember-app.js"></script>
 
     {{content-for "body-footer"}}
   </body>
