demo-untyped-glimmerx-app -> js-glimmerx-app

--- a/test-packages/js-glimmerx-app/index.html
+++ b/test-packages/js-glimmerx-app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>demo-untyped-glimmerx-app</title>
+    <title>js-glimmerx-app</title>
 
     <link rel="icon" href="./public/favicon.png" />
     <link rel="apple-touch-icon" href="./public/logo192.png" />
