Run linting from the root instead of per-project so it's faster

--- a/test-packages/ts-ember-app/app/index.html
+++ b/test-packages/ts-ember-app/app/index.html
@@ -9,11 +9,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
-    <link
-      integrity=""
-      rel="stylesheet"
-      href="{{rootURL}}assets/ts-ember-app.css"
-    />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ts-ember-app.css" />
 
     {{content-for "head-footer"}}
   </head>
