--- a/test-packages/js-glimmerx-app/tests/index.html
+++ b/test-packages/js-glimmerx-app/tests/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>js-glimmerx-app Tests</title>
     <link rel="icon" href="../public/favicon.png" />
   </head>
@@ -12,4 +12,3 @@
     <script src="/testem.js"></script>
   </body>
 </html>
-
