--- a/character-position-viewer.html
+++ b/character-position-viewer.html
@@ -52,11 +52,14 @@
     input.addEventListener('input', () => {
       let offset = 0;
       const lines = input.value.split('\n');
+      lines[lines.length - 1] = lines[lines.length - 1] + '\u0000';
+      
       output.innerHTML = lines.map((line, lineNum) => {
         const result = (lineNum === lines.length - 1 ? line : line + '\n').split('').map((char, charNum) => {
           const currentOffset = offset + charNum;
           const displayChar = char === ' ' ? '␣' : 
                             char === '\n' ? '↵' :
+                            char === '\u0000' ? '␀' :
                             char;
           const result = `<div style="display: inline-block; font-family: monospace; border: 1px solid #ccc; margin: 1px; padding: 2px;">
             <div style="font-size: 16px;">${displayChar}</div>
